--- a/helm/app/values.yaml
+++ b/helm/app/values.yaml
@@ -1,50 +1,58 @@
-includeAntiaffinity: true
+replicaCount: 1
 
-config: {}
+image:
+  repository: nginx
+  pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: ""
 
-secret: {}
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
+podAnnotations: {}
 
 podSecurityContext: {}
+  # fsGroup: 2000
 
-replicaCount: 2
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
 
 service:
-  appProtocol: 'http'
-  name: 'http'
+  name: http
   port: 80
-  protocol: 'TCP'
-  type: 'ClusterIP'
+  targetPort: http
+  protocol: TCP
+  type: ClusterIP
 
 ingress:
   enabled: false
-  className: ""
+  className: "nginx"
   annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    # kubernetes.io/tls-acme: "true"
   hosts: []
-  # - host: chart-example.local
-  #   paths:
-  #     - path: /
-  #       pathType: Prefix
+    # - host: app
+    #   paths:
+    #     - path: /
+    #       pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
-
-serviceAccount:
-  create: true
-  annotations: {}
-  name: ""
-
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
 
 resources: {}
   # limits:
@@ -56,7 +64,30 @@ resources: {}
 
 autoscaling:
   enabled: false
-  # minReplicas: 1
-  # maxReplicas: 10
-  # targetCPUUtilizationPercentage: 80
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+
+# Avoid pod replicas to be in the same node
+nodeExclusivity: true
+
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
+
+config: {}
+
+secret: {}
