--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,18 +20,10 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Run chart-releaser common
+      - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.0
         with:
-          charts_dir: helm/common
-          charts_repo_url: https://charts.parcellab.dev
-          config: cr.yaml
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Run chart-releaser app
-        uses: helm/chart-releaser-action@v1.4.0
-        with:
-          charts_dir: helm/app
+          charts_dir: helm
           charts_repo_url: https://charts.parcellab.dev
           config: cr.yaml
         env:
