--- a/helm/app/Chart.yaml
+++ b/helm/app/Chart.yaml
@@ -5,4 +5,4 @@ version: 0.0.3
 dependencies:
   - name: common
     version: 0.0.2
-    repository: https://charts.parcellab.dev
+    repository: file://../common
