--- a/applications/app/Chart.yaml
+++ b/applications/app/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: app
 description: Chart for generic applications.
-version: 0.0.4
+version: 0.0.1
 dependencies:
   - name: common
-    version: 0.0.3
-    repository: file://../common
+    version: 0.0.1
+    repository: https://charts.parcellab.dev
