--- a/parcellab/app/values.yaml
+++ b/parcellab/app/values.yaml
@@ -4,6 +4,9 @@ appEnv: prod # The application environment
 appName: app # The application name
 appOrgRepository: ghcr.io/parcellab # The organization docker repository
 
+datadog:
+  enabled: true
+
 image:
   # repository: nginx  # Will apply if appOrgRepository and appName is not defined
   pullPolicy: Always
