--- a/parcellab/app/values.yaml
+++ b/parcellab/app/values.yaml
@@ -13,7 +13,8 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: stable
 
-imagePullSecrets: []
+imagePullSecrets:
+- name: github-docker
 
 serviceAccount:
   # Specifies whether a service account should be created
