--- a/parcellab/app/templates/deployment.yaml
+++ b/parcellab/app/templates/deployment.yaml
@@ -19,9 +19,9 @@ spec:
       labels:
         {{- include "common.labels" . | nindent 8 }}
         {{- if and .Values.datadog .Values.datadog.enabled }}
-        tags.datadoghq.com/env: {{ include "common.env" . }}
-        tags.datadoghq.com/service: {{ $fullname }}
-        tags.datadoghq.com/version: {{ include "common.version" . }}
+        tags.datadoghq.com/env: {{ include "common.env" . | quote }}
+        tags.datadoghq.com/service: {{ $fullname | quote }}
+        tags.datadoghq.com/version: {{ include "common.version" . | quote }}
         {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
