--- a/parcellab/app/values.yaml
+++ b/parcellab/app/values.yaml
@@ -84,15 +84,15 @@ affinity: {}
 # Avoid pod replicas to be in the same node
 nodeExclusivity: true
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
+# livenessProbe:
+#   httpGet:
+#     path: /
+#     port: http
 
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
+# readinessProbe:
+#   httpGet:
+#     path: /
+#     port: http
 
 # Create a configmap whose attributes will be loaded to the container as
 # environment variables using the values defined here
