fix: bump app chart

--- a/parcellab/app/values.yaml
+++ b/parcellab/app/values.yaml
@@ -124,3 +124,9 @@ podDisruptionBudget:
 
 vpa:
   enabled: false
+
+# workload:
+  #   command:
+  #   - /bin/sh
+  #   - -c
+  #   - date; echo Hello from the Kubernetes cluster
