--- a/parcellab/app/templates/deployment.yaml
+++ b/parcellab/app/templates/deployment.yaml
@@ -1,105 +1,1 @@
-{{- $fullname := include "common.fullname" . }}
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ $fullname }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
-spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
-  selector:
-    matchLabels:
-      {{- include "common.selectors" . | nindent 6 }}
-  template:
-    metadata:
-      annotations:
-        {{- include "common.pod.annotations" . | nindent 8 }}
-      labels:
-        {{- include "common.labels" . | nindent 8 }}
-        {{- if and .Values.datadog .Values.datadog.enabled }}
-        tags.datadoghq.com/env: {{ include "common.env" . | quote }}
-        tags.datadoghq.com/service: {{ $fullname | quote }}
-        tags.datadoghq.com/version: {{ include "common.version" . | quote }}
-        {{- end }}
-    spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: {{ include "common.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      {{- if and .Values.datadog .Values.datadog.enabled }}
-      volumes:
-         - hostPath:
-             path: /var/run/datadog/
-           name: apmsocketpath
-      {{- end }}
-      containers:
-      - name: {{ .Chart.Name }}
-        securityContext:
-          {{- toYaml .Values.securityContext | nindent 10 }}
-        image: {{ include "common.imageurl" . }}
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        envFrom:
-          {{- if .Values.config }}
-          - configMapRef:
-              name: {{ $fullname }}
-          {{- end }}
-          {{- if .Values.externalSecret }}
-          - secretRef:
-              name: {{ $fullname }}
-          {{- end }}
-        livenessProbe:
-          {{- toYaml .Values.livenessProbe | nindent 10 }}
-        readinessProbe:
-          {{- toYaml .Values.readinessProbe | nindent 10 }}
-        ports:
-          - name: {{ .Values.service.name }}
-            containerPort: {{ .Values.service.port }}
-            protocol: {{ .Values.service.protocol }}
-        resources:
-          {{- toYaml .Values.resources | nindent 10 }}
-        {{- if and .Values.datadog .Values.datadog.enabled }}
-        volumeMounts:
-          - mountPath: /var/run/datadog
-            name: apmsocketpath
-        env:
-          - name: DD_ENV
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.labels['tags.datadoghq.com/env']
-          - name: DD_SERVICE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.labels['tags.datadoghq.com/service']
-          - name: DD_VERSION
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.labels['tags.datadoghq.com/version']
-          - name: DD_LOGS_INJECTION
-            value: "true"
-          - name: DD_TRACE_ENABLED
-            value: "true"
-          - name: DD_TRACE_AGENT_URL
-            value: unix:///var/run/datadog/apm.socket
-        {{- end }}
-    {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- if .Values.nodeExclusivity }}
-      affinity:
-        {{- include "common.nodeExclusivity" . | nindent 8 }}
-    {{- else }}
-    {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- end }}
+{{- include "common.deployment" . }}
