fix: fix merged values

--- a/parcellab/cronjob/templates/cronjob.yaml
+++ b/parcellab/cronjob/templates/cronjob.yaml
@@ -1,4 +1,5 @@
+{{- $root := . -}}
 {{- range $cronjob := .Values.cronjobs }}
-{{- include "common.cronjob" (merge (deepCopy .) $cronjob) }}
+{{- include "common.cronjob" (merge (deepCopy $root) (dict "cronjob" .)) }}
 ---
 {{- end }}
