--- a/parcellab/app/templates/externalsecret.yaml
+++ b/parcellab/app/templates/externalsecret.yaml
@@ -1,1 +1,10 @@
+{{- if .Values.services -}}
+{{- $root := . -}}
+{{- range $services := .Values.services }}
+{{- if .config -}}
+{{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
+{{- end -}}
+---
+{{- end -}}
+{{- end -}}
 {{- include "common.externalsecret" . }}
