--- a/parcellab/app/values.yaml
+++ b/parcellab/app/values.yaml
@@ -125,8 +125,11 @@ podDisruptionBudget:
 vpa:
   enabled: false
 
-# workload:
+services:
+  # - name: myservice
   #   command:
   #   - /bin/sh
   #   - -c
   #   - date; echo Hello from the Kubernetes cluster
+
+volumes: []
