fix: set default cronjob

--- a/parcellab/cronjob/templates/cronjob.yaml
+++ b/parcellab/cronjob/templates/cronjob.yaml
@@ -1,5 +1,9 @@
+{{- if .Values.cronjobs -}}
 {{- $root := . -}}
 {{- range $cronjob := .Values.cronjobs }}
 {{- include "common.cronjob" (merge (deepCopy $root) (dict "cronjob" .)) }}
 ---
+{{- end }}
+{{- else }}
+{{- include "common.cronjob" . }}
 {{- end }}
