fix: adapt app chart

--- a/parcellab/app/templates/ingress.yaml
+++ b/parcellab/app/templates/ingress.yaml
@@ -1,1 +1,8 @@
+{{- if .Values.ingresses -}}
+{{- $root := . -}}
+{{- range $ingress := .Values.ingresses }}
+{{- include "common.ingress" (merge (deepCopy $root) (dict "ingress" .)) }}
+---
+{{- end -}}
+{{- end -}}
 {{- include "common.ingress" . }}
