--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Release Chart Libraries
+name: Release Charts
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
       - name: Run chart-releaser library
         uses: helm/chart-releaser-action@v1.4.0
         with:
-          charts_dir: libraries
+          charts_dir: parcellab
           charts_repo_url: https://charts.parcellab.dev
           config: cr.yaml
         env:
