--- a/parcellab/app/templates/externalsecret.yaml
+++ b/parcellab/app/templates/externalsecret.yaml
@@ -1,6 +1,6 @@
-{{- if .Values.services -}}
+{{- if .Values.extraServices -}}
 {{- $root := . -}}
-{{- range $services := .Values.services }}
+{{- range .Values.extraServices }}
 {{- if .config -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
 {{- end -}}
