--- a/parcellab/cronjob/Chart.yaml
+++ b/parcellab/cronjob/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: cronjob
-description: Chart for generic cron jobs.
-version: 0.0.7
+description: Single cron job
+version: 0.0.8
 dependencies:
   - name: common
     version: "*"
