--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -11,7 +11,7 @@ datadog:
 env: prod
 externalSecret: {}
 imagePullSecrets:
-- name: github-docker
+  - name: github-docker
 image:
   pullPolicy: Always
   tag: stable
@@ -25,7 +25,7 @@ podAnnotations: {}
 podDisruptionBudget:
   enabled: false
   spec:
-    maxUnavailable: '50%'
+    maxUnavailable: "50%"
 podSecurityContext: {}
 replicaCount: 1
 resources: {}
