--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -28,7 +28,8 @@ config: {}
 # environment variables using the external-secrets project and an already
 # configured secret store reference
 # See https://external-secrets.io/latest/spec/#external-secrets.io/v1beta1.ExternalSecretSpec
-externalSecret: {}
+externalSecret:
+  {}
   # secretStoreRef:
   #   name: secretsmanager
   #   kind: ClusterSecretStore
@@ -46,7 +47,7 @@ datadog:
   enabled: true
 
 imagePullSecrets:
-- name: github-docker
+  - name: github-docker
 
 nodeExclusivity: true # Avoid pod replicas to be in the same node
 
@@ -54,7 +55,8 @@ nodeSelector: {}
 
 podAnnotations: {}
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -90,10 +92,12 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: stable
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-resources: {}
+resources:
+  {}
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
