--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -24,7 +24,8 @@ ingress:
   className: "nginx"
   annotations:
     # kubernetes.io/tls-acme: "true"
-  hosts: []
+  hosts:
+    []
     # - host: app
     #   paths:
     #     - path: /
@@ -62,7 +63,8 @@ config: {}
 # environment variables using the external-secrets project and an already
 # configured secret store reference
 # See https://external-secrets.io/latest/spec/#external-secrets.io/v1beta1.ExternalSecretSpec
-externalSecret: {}
+externalSecret:
+  {}
   # secretStoreRef:
   #   name: secretsmanager
   #   kind: ClusterSecretStore
@@ -84,7 +86,7 @@ autoscaling:
 podDisruptionBudget:
   enabled: false
   spec:
-    maxUnavailable: '50%'
+    maxUnavailable: "50%"
 
 vpa:
   enabled: false
@@ -99,13 +101,14 @@ datadog:
   enabled: true
 
 imagePullSecrets:
-- name: github-docker
+  - name: github-docker
 
 nodeExclusivity: true # Avoid pod replicas to be in the same node
 
 nodeSelector: {}
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -145,17 +148,18 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: stable
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-resources: {}
+resources:
+  {}
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
   # requests:
   #   cpu: 50m
   #   memory: 64Mi
-
 # livenessProbe:
 #   httpGet:
 #     path: /
