--- a/parcellab/app/templates/externalsecret.yaml
+++ b/parcellab/app/templates/externalsecret.yaml
@@ -1,7 +1,16 @@
 {{- if .Values.extraServices -}}
 {{- $root := . -}}
 {{- range .Values.extraServices }}
-{{- if .config -}}
+{{- if .externalSecret -}}
+{{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
+{{- end -}}
+---
+{{- end -}}
+{{- end -}}
+{{- if .Values.extraServices -}}
+{{- $root := . -}}
+{{- range .Values.extraServices }}
+{{- if .externalSecret -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
 {{- end -}}
 ---
