--- a/parcellab/cronjob/templates/cronjob.yaml
+++ b/parcellab/cronjob/templates/cronjob.yaml
@@ -1,1 +1,9 @@
+{{- if .Values.extraCronjobs -}}
+{{- $root := . -}}
+{{- range .Values.extraCronjobs }}
+{{- include "common.cronjob" (merge (deepCopy $root) (dict "cronjob" .)) }}
+---
+{{- end }}
+{{- else }}
 {{- include "common.cronjob" . }}
+{{- end }}
