refactor: fix values to latest common changes

--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -1,4 +1,4 @@
-env: "prod" # The cronjob environment
+environment: "prod" # The cronjob environment
 
 name: "cronjob" # The cronjob name
 
@@ -103,6 +103,10 @@ image:
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: stable
+
+env: []
+# - name: MY_ENV_VAR
+#   value: "myvalue"
 
 podSecurityContext:
   {}
