--- a/parcellab/worker-group/Chart.yaml
+++ b/parcellab/worker-group/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: worker
+name: worker-group
 description: Set of workers that do not expose a service
 version: 0.0.1
 dependencies:
