--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "lint:prettier": "prettier --check --ignore-unknown .",
     "format": "prettier --write --ignore-unknown .",
     "prepare": "husky install",
-    "template": "find parcellab -type d -maxdepth 1 -mindepth 1 -not -path parcellab/common | xargs -I {} helm template {}"
+    "template": "find parcellab -type d -maxdepth 1 -mindepth 1 -not -path parcellab/common | xargs -I {} helm template {}",
+    "test:common": "helm lint parcellab/common",
+    "test:cronjob": "helm dependency update parcellab/cronjob && helm lint parcellab/cronjob && helm template parcellab/cronjob",
+    "test:microservice": "helm dependency update parcellab/microservice && helm lint parcellab/microservice && helm template parcellab/microservice",
+    "test:monolith": "helm dependency update parcellab/monolith && helm lint parcellab/monolith && helm template parcellab/monolith",
+    "test:worker-group": "helm dependency update parcellab/worker-group && helm lint parcellab/worker-group && helm template parcellab/worker-group",
+    "test": "npm run test:common && npm run test:cronjob && npm run test:microservice && npm run test:monolith && npm run test:worker-group"
   }
 }
