--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -157,13 +157,12 @@ podSecurityContext:
   # fsGroup: 2000
 
 resources:
-  {}
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 50m
-  #   memory: 64Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 50m
+    memory: 64Mi
 # livenessProbe:
 #   httpGet:
 #     path: /
