fix: fix worker pods

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -15,28 +15,28 @@ service:
   protocol: TCP
   type: ClusterIP
 
-extraServices: []
-# - name: myservice
-#   command:
-#   - /bin/sh
-#   - -c
-#   - date; echo Hello from the Kubernetes cluster
-#   portNumber: 3000
-#   livenessProbe:
-#     httpGet:
-#       path: /
-#       port: http
-#   readinessProbe:
-#     httpGet:
-#       path: /
-#       port: http
-#   resources:
-#     limits:
-#       cpu: 100m
-#       memory: 128Mi
-#     requests:
-#       cpu: 50m
-#       memory: 64Mi
+extraServices:
+  - name: myservice
+    command:
+      - /bin/sh
+      - -c
+      - date; echo Hello from the Kubernetes cluster
+    portNumber: 3000
+    livenessProbe:
+      httpGet:
+        path: /
+        port: http
+    readinessProbe:
+      httpGet:
+        path: /
+        port: http
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 50m
+        memory: 64Mi
 
 ##
 ## Ingress
@@ -97,6 +97,36 @@ extraCronjobs:
 #   schedule: "* * * * *"
 #   successfulJobsHistoryLimit: 3
 #   suspend: false
+
+##
+## Workers
+##
+
+workers:
+  - name: myworker
+    command:
+      - /bin/sh
+      - -c
+      - date; echo Hello from the Kubernetes cluster
+    portNumber: 3000
+    livenessProbe:
+      httpGet:
+        path: /
+        port: http
+    readinessProbe:
+      httpGet:
+        path: /
+        port: http
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 50m
+        memory: 64Mi
+    containerEnv:
+      - name: MY_ENV_VAR
+        value: "myvalue"
 
 ##
 ## Configuration
