fix: set cronjobs list

--- a/parcellab/monolith/templates/configmap-cronjobs.yaml
+++ b/parcellab/monolith/templates/configmap-cronjobs.yaml
@@ -1,6 +1,6 @@
 {{- $root := . -}}
-{{- if .Values.extraCronjobs -}}
-{{- range .Values.extraCronjobs }}
+{{- if .Values.cronjobs -}}
+{{- range .Values.cronjobs }}
 {{- if .config -}}
 {{- include "common.configmap" (merge (deepCopy $root) (dict "config" .config "name" .name)) }}
 {{- end -}}
