--- a/parcellab/monolith/templates/externalsecret-cronjobs.yaml
+++ b/parcellab/monolith/templates/externalsecret-cronjobs.yaml
@@ -1,6 +1,6 @@
 {{- $root := . -}}
-{{- if .Values.extraCronjobs -}}
-{{- range .Values.extraCronjobs }}
+{{- if .Values.cronjobs -}}
+{{- range .Values.cronjobs }}
 {{- if .externalSecret -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
 {{- end -}}
