--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "@commitlint/config-conventional": "17.0.3",
     "@parcellab/danger-plugin": "^0.0.16",
     "danger": "^11.1.1",
+    "helm-test": "^1.3.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
     "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": ">=v18"
   },
   "lint-staged": {
     "**/*": "npm run format"
