--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -72,25 +72,8 @@ extraIngresses: []
 #     - chart-example.local
 
 ##
-## Cronjob
+## Cronjobs
 ##
-
-# Only for the defaults
-cronjob:
-  enabled: true
-  concurrencyPolicy: "Allow"
-  failedJobsHistoryLimit: 1
-  schedule: "* * * * *"
-  successfulJobsHistoryLimit: 3
-  suspend: false
-  job:
-    activeDeadlineSeconds: 900 # 15 minutes
-    backoffLimit: 2
-
-  #   command:
-  #   - /bin/sh
-  #   - -c
-  #   - date; echo Hello from the Kubernetes cluster
 
 cronjobs:
   []
@@ -102,7 +85,7 @@ cronjobs:
   #   concurrencyPolicy: "Allow"
   #   failedJobsHistoryLimit: 1
   #   schedule: "* * * * *"
-  #   successfulJobsHistoryLimit: 3
+  #   successfulJobsHistoryLimit: 0
   #   suspend: false
 
 ##
